--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Modificar.cshtml
@@ -144,7 +144,7 @@
                             <div class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                             </div>
-                            @Html.TextBoxFor(q => q.gi_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_oc" })
+                            @Html.TextBoxFor(q => q.gi_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "gi_fecha" })
                             @Html.ValidationMessageFor(q => q.gi_fecha, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                             <div class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                             </div>
-                            @Html.TextBoxFor(q => q.gi_FechaInicioTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_oc" })
+                            @Html.TextBoxFor(q => q.gi_FechaInicioTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "gi_FechaInicioTraslado" })
                             @Html.ValidationMessageFor(q => q.gi_FechaInicioTraslado, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                             <div class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                             </div>
-                            @Html.TextBoxFor(q => q.gi_FechaFinTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_oc" })
+                            @Html.TextBoxFor(q => q.gi_FechaFinTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "gi_FechaFinTraslado" })
                             @Html.ValidationMessageFor(q => q.gi_FechaFinTraslado, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -265,18 +265,21 @@
 
     $(function () {
         CargarPuntosDeVenta();
-        GetUltimoDocumento();
         //Date picker
-        $('#vt_fecha').datepicker({
+        $('#gi_FechaFinTraslado').datepicker({
+            autoclose: true
+        })
+        $('#gi_FechaInicioTraslado').datepicker({
+            autoclose: true
+        })
+        $('#gi_fecha').datepicker({
             autoclose: true
         })
 
         $("#IdSucursal").change(function () {
             CargarPuntosDeVenta();
-            GetUltimoDocumento();
         });
         $("#IdPuntoVta").change(function () {
-            GetUltimoDocumento();
         });
 
     });
@@ -352,6 +355,30 @@
         }
 
 
+    function get_direccion() {
+        var tipo = IdCliente.GetValue();
+
+        var datos = {
+            IdCliente: tipo
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("get_direcciones", "GuiaRemision",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#Direccion_Origen").val(data.Direccion_emp);
+                $("#Direccion_Destino").val(data.Direccion);
+                get_info_termino_pago();
+            },
+            error: function (error) {
+                alert(error);
+            }
+
+        });
+    }
 
 </script>
 
