--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/_GridViewPartial_devolucion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/_GridViewPartial_devolucion.cshtml
@@ -4,7 +4,7 @@
         settings.Name = "GridView_devolucion";
         settings.CallbackRouteValues = new { Controller = "DevolucionInventario", Action = "GridViewPartial_devolucion", Fecha_ini = ViewBag.Fecha_ini, Fecha_fin = ViewBag.Fecha_fin };
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdLinea";
+        settings.KeyFieldName = "IdDev_Inven";
 
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
@@ -46,7 +46,7 @@
         //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
-            if (Convert.ToString(e.GetValue("Estado")) == "I")
+            if (Convert.ToBoolean(e.GetValue("Estado")) == false)
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
@@ -56,11 +56,11 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
+                if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdLinea = DataBinder.Eval(tc.DataItem, "IdLinea"), IdCategoria = ViewBag.IdCategoria }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdLinea = DataBinder.Eval(tc.DataItem, "IdLinea"), IdCategoria = ViewBag.IdCategoria },
+                Html.ActionLink("Modificar", "Modificar", new { IdDev_Inven = DataBinder.Eval(tc.DataItem, "IdDev_Inven")}) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdDev_Inven = DataBinder.Eval(tc.DataItem, "IdDev_Inven")},
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -68,34 +68,18 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdCategoria = ViewBag.IdCategoria }).ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = System.Web.UI.WebControls.Unit.Pixel(150);
         });
-        settings.Columns.Add("IdLinea", "ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("cod_linea", "Código").Width = Unit.Percentage(20);
-        settings.Columns.Add("nom_linea", "Descripción").Width = Unit.Percentage(60);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(20);
+        settings.Columns.Add("cod_Dev_Inven", "Código").Width = Unit.Percentage(20);
+        settings.Columns.Add("observacion", "Observación").Width = Unit.Percentage(60);
+        settings.Columns.Add("Fecha", "Fecha").Width = Unit.Percentage(10);
+        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
 
-
-        settings.Columns.Add(column =>
-        {
-            column.Caption = "Grupo";
-            column.Width = Unit.Pixel(120);
-            column.SetDataItemTemplateContent(container =>
-            {
-                Html.DevExpress().HyperLink(hyperlink =>
-                {
-                    var IdLinea = DataBinder.Eval(container.DataItem, "IdLinea");
-                    var IdCategoria = DataBinder.Eval(container.DataItem, "IdCategoria");
-                    hyperlink.Properties.Text = "Grupos";
-                    hyperlink.NavigateUrl = Url.Action("Index", "Grupo", new { IdCategoria = IdCategoria, IdLinea = IdLinea });
-                }).Render();
-            });
-        });
     });
 
 }
