--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Líneas";
+    ViewBag.Title = "Devolución";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -11,10 +11,7 @@
 @using (Html.BeginForm())
 {
 
-    @Html.Action("GridViewPartial_linea", new { IdCategoria = ViewBag.IdCategoria })
-
-    <div class="box-footer">
-        <a class="btn btn-default" href="@Url.Action("Index","Categoria",new { IdCategoria = ViewBag.IdCategoria, Area = "Inventario" },null)">Volver</a>
-    </div>
+    @Html.Action("GridViewPartial_devolucion", new { Fecha_ini = ViewBag.Fecha_ini, Fecha_fin = ViewBag.Fecha_fin })
+    
 
 }
