--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
@@ -208,7 +208,7 @@
             </div>
             </div>
     </div>
-    <div class="row">
+    <div class="col-md-12">
         <div class="col-md-12">
             <button type="button" class="btn btn-primary" onclick="MostrarModal()">
                 <i class="fa fa-search"></i>
