--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/_GridViewPartial_devolucion_det_x_cruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/_GridViewPartial_devolucion_det_x_cruzar.cshtml
@@ -1,11 +1,11 @@
 @using System.Web.UI.WebControls;
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridView_LoteFactura";
-        settings.CallbackRouteValues = new { Controller = "Factura", Action = "GridViewPartial_LoteFactura" };
+        settings.Name = "GridView_devolucion_det_x_cruzar";
+        settings.CallbackRouteValues = new { Controller = "DevolucionInventario", Action = "GridViewPartial_devolucion_det_x_cruzar" };
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdProducto";
-        
+        settings.KeyFieldName = "secuencia";
+
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
         settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
@@ -29,47 +29,40 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
         settings.Columns.Add(column =>
         {
-            column.FieldName = "IdProducto";
-            column.Caption = "ID";
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(20);
+            column.FieldName = "Su_Descripcion";
+            column.Caption = "Sucursal";
         });
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(35);
-            column.FieldName = "pr_descripcion";
-            column.Caption = "Producto";
+            column.Width = Unit.Percentage(20);
+            column.FieldName = "tm_descripcion";
+            column.Caption = "Tipo movimiento";
         });
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(15);
-            column.FieldName = "lote_num_lote";
-            column.Caption = "Lote";
+            column.Width = Unit.Percentage(10);
+            column.FieldName = "IdNumMovi";
+            column.Caption = "# Movimiento";
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "lote_fecha_fab";
-            column.Caption = "Fecha fab.";
+            column.FieldName = "cm_fecha";
+            column.Caption = "Fecha";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
             column.Width = Unit.Percentage(10);
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "lote_fecha_vcto";
-            column.Caption = "Fecha vcto";
-            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(30);
+            column.FieldName = "cm_observacion";
+            column.Caption = "Observación";
         });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "stock";
-            column.Caption = "Stock";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(5);
-        });
+
         settings.Columns.Add(column =>
         {
             column.Caption = "*";
-            column.FieldName = "IdProducto";
+            column.FieldName = "secuencia";
             column.Width = Unit.Percentage(10);
             column.UnboundType = DevExpress.Data.UnboundColumnType.String;
             column.SetDataItemTemplateContent(c =>
@@ -77,22 +70,11 @@
                 Html.DevExpress().Button(settingsBtn =>
                 {
                     settingsBtn.Name = "btn" + c.KeyValue;
-                    settingsBtn.Text = "Aceptar";
-                    settingsBtn.ClientSideEvents.Click = "function(s, e) {SetLoteDetalle('" + c.KeyValue + "');}";
+                    settingsBtn.Text = "Devolver";
+                    settingsBtn.ClientSideEvents.Click = "function(s, e) {SetMovimiento('" + c.KeyValue + "');}";
                 }).Render();
             });
         });
-        settings.PreRender = (sender, e) =>
-        {
-            MVCxGridView gridView = (MVCxGridView)sender;
-            gridView.ExpandAll();
-        };
-
-        settings.BeforeGetCallbackResult = (sender, e) =>
-        {
-            MVCxGridView gridView = (MVCxGridView)sender;
-            gridView.ExpandAll();
-        };
     });
 }
 @grid.Bind(Model).GetHtml()
