--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/_GridViewPartial_devolucion_det_x_cruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/_GridViewPartial_devolucion_det_x_cruzar.cshtml
@@ -4,7 +4,7 @@
         settings.Name = "GridView_devolucion_det_x_cruzar";
         settings.CallbackRouteValues = new { Controller = "DevolucionInventario", Action = "GridViewPartial_devolucion_det_x_cruzar" };
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "secuencia";
+        settings.KeyFieldName = "SecuencialID";
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -29,7 +29,7 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(20);
+            column.Width = Unit.Percentage(15);
             column.FieldName = "Su_Descripcion";
             column.Caption = "Sucursal";
         });
@@ -62,8 +62,8 @@
         settings.Columns.Add(column =>
         {
             column.Caption = "*";
-            column.FieldName = "secuencia";
-            column.Width = Unit.Percentage(10);
+            column.FieldName = "SecuencialID";
+            column.Width = Unit.Percentage(15);
             column.UnboundType = DevExpress.Data.UnboundColumnType.String;
             column.SetDataItemTemplateContent(c =>
             {
