--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Nuevo.cshtml
@@ -1,4 +1,5 @@
-﻿@model Core.Erp.Info.RRHH.ro_Solicitud_Vacaciones_x_empleado_Info
+﻿
+@model Core.Erp.Info.RRHH.ro_Solicitud_Vacaciones_x_empleado_Info
 @{
     ViewBag.Title = "Nuevo Solicitud";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -78,44 +79,21 @@
             </div>
         </div>
     </div>
-    
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdVacacion">Periodo de vacaciones*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdVacacion, settings =>
-               {
-                   settings.Name = "IdVacacion";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {2}";
-                   settings.Properties.Columns.Add("IdPeriodo_Inicio", "Periodo inicio").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("IdPeriodo_Fin", "Periodo hasta").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("FechaIni", "Fecha inicio").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                   settings.Properties.Columns.Add("FechaFin", "Fecha hasta").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                   settings.Properties.Columns.Add("DiasGanado", "Días ganado").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                   settings.Properties.Columns.Add("DiasTomados", "Días gozado").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                    @Html.Action("cmb_vacaciones")
+                    @Html.ValidationMessageFor(q => q.IdVacacion, "", new { @class = "text-danger" })
 
-                   settings.Properties.ValueField = "IdVacacion";
-                   settings.Properties.ValueType = typeof(decimal);
-                   settings.Properties.TextField = "Empleado";
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                   //settings.Properties.DataSource = Model.lst_vacaciones;
-                   settings.CallbackRouteValues = new { Controller = "Vacaciones", Action = "GridLookupPartial_vacaciones" };
-               }
-             ).BindList(ViewData["vacaciones"]).GetHtml()
 
                 </div>
             </div>
         </div>
     </div>
    
-
-
-
-
 
     @*<div class="row">
         <div class="col-md-12">
@@ -209,7 +187,6 @@
     })
 </script>
 
-
 <script>
     function calcular_vacaciones()
             {
@@ -227,8 +204,8 @@
                     contentType: 'application/json; charset=utf-8',
                     success: function (data)
                     {
-                         IdVacacion.PerformCallback();
-                       
+                        IdVacaciones.PerformCallback();
+
                     },
                     error: function (error)
                     {
@@ -236,3 +213,7 @@
                     });
 };
 </script>
+
+
+
+
