--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/_CmbProductoHijo_Facturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/_CmbProductoHijo_Facturacion.cshtml
@@ -15,7 +15,7 @@
         settings.Properties.TextField = "pr_descripcion";
         settings.Properties.TextFormatString = "[{0}] {1}";
 
-        settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdProductoPadre'] = IdProductoPadre.GetValue(null); }";
+        settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdProductoPadre'] = IdProductoPadre.GetValue(); }";
 
         settings.Properties.Columns.Add("IdProducto", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Properties.Columns.Add("pr_descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
